# circuitsacul.dev

./: README.md  noxfile.py  pyproject.toml
circuitsacul/: site.py
circuitsacul/website/pages/site/: home.jinja2
circuitsacul/website/pages/templates/: base.jinja2
