[tool.black]
line-length=79
skip-magic-trailing-comma=true

[tool.poetry]
name = "circuitsacul.dev"
version = "0.1.0"
description = "My personal website."
authors = ["CircuitSacul <circuitsacul@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
nox = "^2022.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
